--- a/Assignment 1/README
+++ b/Assignment 1/README
@@ -1,6 +1,6 @@
                                 
                                         Assignment 1 - Program for Account Receivable Department 
                                         
- - There is a ######.pdf file that explains the program. 
+ - There is a Assignment#1.jpg file that explains the program. 
  - MasterFile.txt and TransactionFile.txt are infiles. 
  - Invoice.txt is an outfile. 
